hard-gists/4043334/run.log
=== Docker Run Log for 4043334 ===
Started at: Mi 29. Okt 14:18:37 CET 2025

[2025-10-29 14:18:38] START: Running container for 4043334
[2025-10-29 14:18:38] SUCCESS: Container f38e94fe9ec6b290dd9411e38b9758554ea6c6f1472bc3169d124fafcf85dac6 started for 4043334
=== Container logs for 4043334 ===
  File "/snippet.py", line 35
    except Exception, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 4043334 ===
[2025-10-29 14:18:40] INFO: Container f38e94fe9ec6b290dd9411e38b9758554ea6c6f1472bc3169d124fafcf85dac6 has stopped
